lintian (2.5.8) UNRELEASED; urgency=low

  * checks/binaries:
    + [NT] Fix a too strict regex causing false-positives for
      biarch packages.  This was a regression introduced in
      version 2.5.7.  Thanks to Sven Joachim for reporting it.
      (Closes: #673106)
  * checks/shared-libs:
    + [NT] Fix false positive "dev-pkg-without-shlib-symlink"
      for shared libraries using "libtool -release X.Y".

  * debian/control:
    + [NT] Add versioned Build-Depends on dpkg-dev (>= 1.16.1~)
      as the test suite relies on it.  Thanks to Luca Falavigna
      for reporting it.

  * data/scripts/interpreters:
    + [NT] Add gbr3 and jython as known interpreters.
      (Closes: #669911, #671387)
  * data/spelling/corrections:
    + [RA] Remove corrections for "writeable" and "overwriteable".  These
      spellings are permitted by the OED in UK English.  (Closes: #673611)

  * lib/Lintian/Collect/*.pm:
    + [NT] Localize "$_" to avoid truncating caller's variable.
      (Closes: #673613)

  * t:
    + [NT] Generate empty ".so" files used in the test.  This
      resolves an issue where dpkg-source would exclude them
      causing a FTBFS.  (Closes: #673198)
    + [NT] Fix test failure in derivatives where some hardening
      flags are enabled by default.  Thanks to Marc Deslauriers
      for the report and the patch.  (Closes: #673449)

 -- Niels Thykier <niels@thykier.net>  Wed, 16 May 2012 13:57:40 +0200

lintian (2.5.7) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - apache2-configuration-files-need-conf-suffix
      - apache2-deprecated-auth-config
      - apache2-module-depends-on-real-apache2-package
      - apache2-module-does-not-depend-on-apache2-api
      - apache2-module-does-not-ship-load-file
      - apache2-reverse-dependency-calls-invoke-rc.d
      - apache2-reverse-dependency-calls-wrapper-script
      - apache2-reverse-dependency-ships-file-in-not-allowed-directory