@@ -1,0 +1,5 @@
+# This profile is auto-generated
+Profile: debian/extra-hardening
+Extends: debian/main
+Enable-Tags: hardening-no-stackprotector
+
