@@ -3,6 +3,7 @@ Sequence: 6000
 Version: 1.0
 Description: Check for missing hardening features
 Architecture: amd64 i386
+Profile: debian/extra-hardening
 Test-For:
  hardening-no-relro
  hardening-no-stackprotector
